# TagMonster

./: Cargo.toml  Cross.toml  README.md  flake.nix  openapi.json
.cargo/: config.toml
box-api/: Cargo.toml  README.md
box-api/.openapi-generator/: FILES
box-api/docs/: AMetadataInstanceUpdateOperation.md  AMetadataTemplateUpdateOperation.md  AccessToken.md  AiAgent.md  AiAgentAllowedEntity.md  AiAgentAsk.md  AiAgentBasicGenTool.md  AiAgentBasicTextTool.md  AiAgentBasicTextToolBase.md  AiAgentBasicTextToolTextGen.md  AiAgentExtract.md  AiAgentExtractStructured.md  AiAgentInfo.md  AiAgentInfoModelsInner.md  AiAgentLongTextTool.md  AiAgentLongTextToolAllOfEmbeddings.md  AiAgentLongTextToolAllOfEmbeddingsStrategy.md  AiAgentLongTextToolTextGen.md  AiAgentReference.md  AiAgentSpreadsheetTool.md  AiAgentTextGen.md  AiApi.md  AiAsk.md  AiAskAgent.md  AiCitation.md  AiDialogueHistory.md  AiExtract.md  AiExtractAgent.md  AiExtractStructured.md  AiExtractStructuredAgent.md  AiExtractStructuredFieldsInner.md  AiExtractStructuredFieldsInnerOptionsInner.md  AiExtractStructuredMetadataTemplate.md  AiExtractStructuredResponse.md  AiItemAsk.md  AiItemBase.md  AiLlmEndpointParams.md  AiLlmEndpointParamsAws.md  AiLlmEndpointParamsGoogle.md  AiLlmEndpointParamsIbm.md  (+493 more)
box-api/src/: lib.rs
box-api/src/apis/: ai_api.rs  ai_studio_api.rs  app_item_associations_api.rs  authorization_api.rs  box_sign_requests_api.rs  box_sign_templates_api.rs  classifications_api.rs  classifications_on_files_api.rs  classifications_on_folders_api.rs  collaborations_api.rs  collaborations_list_api.rs  collections_api.rs  comments_api.rs  configuration.rs  device_pinners_api.rs  domain_restrictions_for_collaborations_api.rs  domain_restrictions_user_exemptions_api.rs  downloads_api.rs  email_aliases_api.rs  events_api.rs  file_requests_api.rs  file_version_legal_holds_api.rs  file_version_retentions_api.rs  file_versions_api.rs  files_api.rs  folder_locks_api.rs  folders_api.rs  group_memberships_api.rs  groups_api.rs  integration_mappings_api.rs  invites_api.rs  legal_hold_policies_api.rs  legal_hold_policy_assignments_api.rs  metadata_cascade_policies_api.rs  metadata_instances_files_api.rs  metadata_instances_folders_api.rs  metadata_templates_api.rs  mod.rs  recent_items_api.rs  retention_policies_api.rs  (+34 more)
docs/: installation.md  setup.md  usage.md
src/: box_login.rs  box_source.rs  default-fields.json  export.rs  file_tree.rs  gapi_login.rs  homepage.rs  local_source.rs  log.rs  main.rs  make_csv.rs  make_sheet.rs  metadata.rs  persist.rs  portion.rs.default  program_settings.rs  project.rs  project_page.rs  project_settings.rs  source.rs  subwindows.rs  top_bar.rs
(+537 files in other folders)
