[package]
name = "tagmaster"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = {version = "0.14", features = ["tokio", "image", "advanced"]}
iced_aw = { version = "0.13", features = ["card"] }
rfd = "0.16"
webbrowser = "1.0.6"
box = {path = "box-api", package = "openapi"}
tokio = "1.48.0"
axum = "0.8.7"
anyhow = "1.0.100"
serde = "1.0.228"
serde_json = "1"
reqwest = "0.12.24"
rand = "0.9.2"
port_check = "0.3.0"
directories = "6.0.0"
tokio-stream = {version = "0.1.17", features = ["fs"]}

[profile.dev.package."*"]
opt-level = 3

