[package]
name = "tagmonster"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = {version = "0.14", features = ["tokio", "image", "advanced"]}
iced_aw = { version = "0.13", features = ["card"] }
rfd = "0.17"
webbrowser = "1.0.6"
box = {path = "box-api", package = "openapi"}
tokio = "1.49.0"
axum = "0.8.8"
anyhow = "1.0.100"
serde = "1"
serde_json = "1"
reqwest = { version = "0.13", features = ["json", "form", "stream"] }
rand = "0.9.2"
port_check = "0.3.0"
directories = "6.0.0"
tokio-stream = {version = "0.1.18", features = ["fs", "sync"]}
image = "0.25.9"
tracing-subscriber = {version = "0.3.22", features = ["fmt", "env-filter"]}
tracing-appender = "0.2.4"
tracing = "0.1.44"
atty = "0.2.14"
iced_futures = "0.14.0"
rustls = {version = "0.23", features = ["aws-lc-rs"]}
google-sheets4 = "7.0.0"
async-trait = "0.1.89"
derive_more = {version = "2.1.1", features = ["debug"]}
magic-db = "0.4.1"  
pure-magic = "0.2.1"
csv-async = {version = "1.3.1", features = ["tokio"]}
url = "2.5.8"

[patch.crates-io]
aws-lc-rs = { git = "https://github.com/justsmth/aws-lc-rs", branch = "fix-cross-compilation"}

[profile.dev.package."*"]
opt-level = 3

